--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: db
+  host: localhost
   username: postgres
   password: password1234
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
