added rubocop, partials and feature test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '2'
 services:
-  localhost:
-    image: postgres
+  db:
+    image: postgres:11
     ports:
       - "5432:5432"
     environment:
       POSTGRES_PASSWORD: password1234
     volumes:
-      - ./tmp/localhost:/var/lib/postgresql/data
+      - ./tmp/db:/var/lib/postgresql/data
   web:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
@@ -16,4 +16,4 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - localhost
+      - db
